2004-09-11  Kevin L Mitchell  <klmitch@mit.edu>

	* ircd/m_wallvoices.c (ms_wallvoices): Don't accept & channel
	WALLVOICES from servers (Bug #721494)

	* ircd/m_wallchops.c (ms_wallchops): Don't accept & channel
	WALLCHOPS from servers (Bug #721494)

	* ircd/ircd_relay.c: Don't accept & channel messages/notices from
	servers (Bug #721494)

	* ircd/gline.c (gline_add): fix GLINE logging (Bug #750927)

	* ircd/channel.c: removing limits shouldn't gobble an argument;
	this was a subtle interaction issue with modebuf...fixed by adding
	MODE_LIMIT to modebuf_flush_int() and short-circuiting
	modebuf_mode_uint() to add MODE_LIMIT to mbuf->mb_rem in the
	removal case.  Note that this is not proof against the sequence,
	"modebuf_mode_uint(mbuf, MODE_ADD | MODE_LIMIT, 10);
	modebuf_mode_uint(mbuf, MODE_DEL | MODE_LIMIT, 10);"
	(Bug #916138)

2004-08-31  Isomer <isomer@undernet.org>
	* ircd/m_account.c: Back out untested login-on-connect extensions,
	we'll relook at these for .12

2004-08-31  Isomer <isomer@undernet.org>
	* ircd/parse.c: Don't rate limit /gline messages

2004-08-26  Kevin L Mitchell  <klmitch@mit.edu>

	* ircd/s_conf.c (lookup_confhost): if field 1 of a C-line contains
	a '/', interpret the text before the '/' as an IP address to bind
	to locally, and use the text after the '/' as the host to connect
	to

	* ircd/s_bsd.c (connect_inet): if origin field in struct ConfItem
	is set, bind to the identified address

	* include/s_conf.h: add origin field to struct ConfItem

2004-06-20  Alex Badea  <decampos@users.sourceforge.net>

	* ircd/m_account.c: login-on-connect extensions, part 1:
	added message sub-types and implemented routing

2004-06-18  Alex Badea  <decampos@users.sourceforge.net>

	* ircd/gline.c (gline_lookup): only return a gline if it's
	active
	
	* ircd/s_conf.c (find_kill): don't check for active gline,
	since gline_lookup does now

2004-06-08  Kevin L Mitchell  <klmitch@mit.edu>

	* ircd/parse.c: don't let rank-and-file users escape HIS