@@ -1,3 +1,8 @@
+2004-09-13  Kevin L Mitchell  <klmitch@mit.edu>
+
+	* ircd/listener.c (add_listener): a listener needs to be listed as
+	a server port listener BEFORE we open the listening port!
+
 2004-09-11  Kevin L Mitchell  <klmitch@mit.edu>
 
 	* ircd/m_wallvoices.c (ms_wallvoices): Don't accept & channel
